src/test/ui/borrowck/borrowck-uniq-via-lend.stderr
error[E0502]: cannot borrow `*v` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-uniq-via-lend.rs:36:12
   |
LL |     let w = &mut v;
   |             ------ mutable borrow occurs here
LL |     borrow(&*v);
   |            ^^^ immutable borrow occurs here
LL |     w.use_mut();
   |     ----------- mutable borrow later used here

error[E0502]: cannot borrow `*v` as immutable because it is also borrowed as mutable
  --> $DIR/borrowck-uniq-via-lend.rs:53:12
   |
LL |     x = &mut v;
   |         ------ mutable borrow occurs here
LL |     borrow(&*v);
   |            ^^^ immutable borrow occurs here
LL |     x.use_mut();
   |     ----------- mutable borrow later used here

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0502`.
